--- a/QuizBattle/build.xml
+++ b/QuizBattle/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="QuizBattle" default="default" basedir=".">
-    <description>Builds, tests, and runs the project QuizBattle.</description>
+<project name="PizzaService_DecoratorPattern" default="default" basedir=".">
+    <description>Builds, tests, and runs the project PizzaService_DecoratorPattern.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
