--- a/QuizBattle/nbproject/project.properties
+++ b/QuizBattle/nbproject/project.properties
@@ -27,10 +27,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/GUI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.JavaGPE_3DLF-2.5.jar=C:\\Users\\tobia\\Downloads\\JavaGPE_3DLF-2.5.jar
+file.reference.JTattoo-1.6.11.jar=C:\\Users\\tobia\\Downloads\\JTattoo-1.6.11.jar
+file.reference.seaglasslookandfeel-0.2.jar=C:\\Users\\tobia\\Downloads\\seaglasslookandfeel-0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.seaglasslookandfeel-0.2.jar}:\
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.JavaGPE_3DLF-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
