--- a/QuizBattle/nbproject/project.properties
+++ b/QuizBattle/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/GUI.jar
+dist.jar=${dist.dir}/QuizBattle.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.common-lang3.jar=..\\..\\..\\..\\Downloads\\common-lang3.jar\\common-lang3.jar
